fix: dark mode for loader

--- a/src/commons/Loader/index.css
+++ b/src/commons/Loader/index.css
@@ -75,3 +75,9 @@
       transform: translate(0, -1em) rotate(-225deg);
     }
   }
+
+  @media (prefers-color-scheme: dark) {
+    .hill, .box {
+        border-color: white;
+    }
+  }
